--- a/research/05_Model_evaluation.ipynb
+++ b/research/05_Model_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Text-Summarizer-Project\\\\research'"
+       "'e:\\\\learning\\\\nlp projects\\\\text_summarizer'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Text-Summarizer-Project'"
+       "'e:\\\\learning\\\\nlp projects'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,15 +125,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
-    "from datasets import load_dataset, load_from_disk, load_metric\n",
+    "from datasets import load_dataset, load_from_disk\n",
     "import torch\n",
     "import pandas as pd\n",
     "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'evaluate'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mevaluate\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'evaluate'"
+     ]
+    }
+   ],
+   "source": [
+    "from evaluate import load"
    ]
   },
   {
@@ -200,13 +221,13 @@
     "\n",
     "        rouge_names = [\"rouge1\", \"rouge2\", \"rougeL\", \"rougeLsum\"]\n",
     "  \n",
-    "        rouge_metric = load_metric('rouge')\n",
+    "        rouge_metric = load('rouge')\n",
     "\n",
     "        score = self.calculate_metric_on_test_ds(\n",
     "        dataset_samsum_pt['test'][0:10], rouge_metric, model_pegasus, tokenizer, batch_size = 2, column_text = 'dialogue', column_summary= 'summary'\n",
     "            )\n",
     "\n",
-    "        rouge_dict = dict((rn, score[rn].mid.fmeasure ) for rn in rouge_names )\n",
+    "        rouge_dict = dict((rn, score[rn] ) for rn in rouge_names )\n",
     "\n",
     "        df = pd.DataFrame(rouge_dict, index = ['pegasus'] )\n",
     "        df.to_csv(self.config.metric_file_name, index=False)\n",
@@ -274,7 +295,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "textS",
+   "display_name": "textSumm",
    "language": "python",
    "name": "python3"
   },
@@ -288,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.19"
   },
   "orig_nbformat": 4
  },
